[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalhub"
version = "0.8.0b0"
description = "Python SDK for Digitalhub"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.9"
dependencies = [
"digitalhub-core>=0.8.0b, <0.9",
]

[project.optional-dependencies]
all = [
    "digitalhub-data>=0.8.0b, <0.9",
    "digitalhub-ml>=0.8.0b, <0.9",
]
ml = ["digitalhub-ml>=0.8.0b, <0.9"]
data = ["digitalhub-data>=0.8.0b, <0.9"]
full = [
"digitalhub-core[full]>=0.8.0b, <0.9",
"digitalhub-data[pandas]>=0.8.0b, <0.9",
"digitalhub-ml[mlflow]>=0.8.0b, <0.9",
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk"

[tool.setuptools.packages.find]
exclude = ["ai*", "wrapper*", "ml*", "core*", "data*", "runtimes*"]

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.8.0b0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
