[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalhub"
version = "0.8.0b14"
description = "Python SDK for Digitalhub"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "pydantic<2",
    "sqlalchemy<2",
    "pyarrow",
    "numpy<2",
    "requests",
    "PyYAML",
    "python-dotenv",
    "GitPython>=3",
    "psycopg2-binary",
    "python-slugify",
]

[project.optional-dependencies]
full = [
    "pandas>=1.2, <2.2",
    "mlflow",
]
pandas = [
    "pandas>=1.2, <2.2",
]
mlflow = [
    "mlflow",
]
dev = [
    "black",
    "pytest",
    "bumpver",
    "ruff",
    "moto"
]
docs = [
    "Sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "numpydoc>=1.6"
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk"

[tool.setuptools.packages.find]
exclude = ["wrapper*", "runtimes*"]

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.8.0b14"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
