[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digitalhub-runtime-modelserve"
version = "0.11.0"
description = "ML Model serving runtime for DHCore"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["ml", "mlops", "kubernetes"]
requires-python = ">=3.9, <3.13"
dependencies = [
"digitalhub>=0.11.0b, <0.12",
]

[project.optional-dependencies]
dev = [
    "digitalhub[dev]>=0.11.0b, <0.12"
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-sdk-runtime-modelserve"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.11.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
