[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalhub-core"
version = "0.4.0"
description = "Python SDK for DHCore"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "aiobotocore",
    "pydantic~=1.10, >=1.10.8",
    "pandas>=1.2, <2.2",
    "sqlalchemy~=1.4",
    "psycopg2-binary~=2.8",
    "pyarrow>=10.0, <15",
    "requests~=2.31",
    "PyYAML~=5.1",
    "GitPython>=3",
]

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "modules*"]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "bumpver",
    "ruff",
    "moto"
]
docs = [
    "Sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "numpydoc>=1.6"
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-core/tree/main/sdk"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
