[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalhub-ml"
version = "0.7.0b6"
description = "Python SDK for DHCore ml layer"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.9"
dependencies = [
    "digitalhub-data>=0.7.0b, <0.8",
]
[project.optional-dependencies]
mlflow = [
    "mlflow",
]

[tool.setuptools.packages.find]
exclude = ["modules*"]

[tool.bumpver]
current_version = "0.7.0b6"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
