[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk"
version = "1.0.0"
description = "Python sdk for DHCore"
readme = "README.md"
authors = [{ name = "Fondazione Bruno Kessler", email = "mmartini@fbk.eu" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.10"
dependencies = [
"boto3==1.28.31",
"pydantic==2.2.1",
"pandas==2.0.3",
"pyarrow==12.0.1",
"sqlalchemy==2.0.20",
]
[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "pytest==7.4.0",
    "moto==4.1.14"
]
docs = [
    "Sphinx==7.1.0",
    "pydata-sphinx-theme==0.13.3",
    "autodoc-pydantic==2.0.1",
    "numpydoc==1.5.0"
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-core/tree/main/sdk"
