[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-mlrun"
version = "0.1.0"
description = "Python sdk for DHCore"
readme = "README.md"
authors = [{ name = "Fondazione Bruno Kessler", email = "mmartini@fbk.eu" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["data", "dataops", "kubernetes"]
requires-python = ">=3.10"
dependencies = [
"mlrun==1.4.0",
]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/digitalhub-core/tree/main/sdk"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
